ci: Changing from PHP-FPM to PHP CLI

--- a/compose/Dockerfile
+++ b/compose/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.3-fpm
+FROM php:8.3-cli
 LABEL authors="ronny-john"
 
 RUN apt-get update -y && apt-get install -y \
@@ -11,13 +11,13 @@ RUN apt-get update -y && apt-get install -y \
     && docker-php-ext-configure pgsql --with-pgsql=/usr/local/pgsql \
     && docker-php-ext-install pgsql pdo_pgsql
 
-COPY public /var/www/public
-COPY src /var/www/src
-COPY config /var/www/config
-COPY vendor /var/www/vendor
+COPY ./public /var/www/public
+COPY ./src /var/www/src
+COPY ./config /var/www/config
+COPY ./vendor /var/www/vendor
 
-EXPOSE 9000
+EXPOSE 80
 
 WORKDIR /var/www/public
 
-CMD ["php-fpm"]
+CMD php -S 0.0.0.0:80
